<resources>

    <string name="app_name">Tfg</string>
    <string name="activity_main">MenuPrincipal</string>
    <string name="inicio">Inicio</string>
    <string name="calendario">Calendario</string>
    <string name="equipo">Equipo</string>
    <string name="chat">Chat</string>
    <string name="menu">Menu</string>
    <string name="correo">Correo electrónico</string>
    <string name="contraseña">Contraseña</string>
    <string name="inicio_sesión">Inicio de Sesión</string>
    <string name="acceder">Acceder</string>
    <string name="no_tienes_cuenta">¿No tienes cuenta?</string>
    <string name="registrarse">Registrarse</string>
    <string name="Nombre">Nombre y Apellidos</string>
    <string name="usuario">Usuario</string>
    <string name="contraseñaRepetir">Repetir Contraseña</string>
    <string name="fechanacimiento">Fecha Nacimiento</string>
    <string name="anadirJugadores">Añadir jugadores/as</string>
    <string name="gestionarJugadores">Gestionar jugadores/as</string>
    <string name="datos_jugador">Datos Jugador/a</string>
    <string name="text_nombre_jugador">Introduce el nombre del jugador/a </string>
    <string name="Posición">Posición </string>
    <string name="text_posición">Introduce la posición del jugador/a </string>
    <string name="text_correo">Introduce el correo del jugador/a </string>
    <string name="text_fecha">Introduce la fecha de nacimiento del jugador/a </string>
    <string name="Fecha_Nacimiento">Fecha Nacimiento</string>
    <string name="Guardar">Guardar</string>
</resources>