<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#FFDAB9">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFDAB9"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="5dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:layout_weight="1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    app:srcCompat="@drawable/anadir_jugador"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="150dp"/>

            </LinearLayout>

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/datos_jugador"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"/>
            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="14dp" />


            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/text_nombre_jugador"/>


            <EditText
                android:id="@+id/NombreJugador"
                android:layout_width="300dp"
                android:layout_height="30dp"
                android:background="@drawable/texto_form"
                android:ems="10"
                android:hint="@string/Nombre"
                android:inputType="textPersonName"
                android:paddingLeft="20sp"
                android:textColor="#6E7692"
                android:textColorHint="#6E7692"
                android:textSize="22sp"
                android:layout_marginTop="5dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp" />
            <TextView
                android:id="@+id/textView112"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/text_correo"/>


            <EditText
                android:id="@+id/Correo"
                android:layout_width="300dp"
                android:layout_height="30dp"
                android:background="@drawable/texto_form"
                android:ems="10"
                android:hint="@string/correo"
                android:inputType="textPersonName"
                android:paddingLeft="20sp"
                android:textColor="#6E7692"
                android:textColorHint="#6E7692"
                android:textSize="22sp"
                android:layout_marginTop="5dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"/>
            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/text_posición"/>


            <EditText
                android:id="@+id/Posicion"
                android:layout_width="300dp"
                android:layout_height="30dp"
                android:background="@drawable/texto_form"
                android:ems="10"
                android:hint="@string/Posición"
                android:inputType="textPersonName"
                android:paddingStart="20dp"
                android:textColor="#6E7692"
                android:textColorHint="#6E7692"
                android:textSize="20sp"
                android:layout_marginTop="5dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"/>

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/text_fecha"/>


            <EditText
                android:id="@+id/Fecha"
                android:layout_width="300dp"
                android:layout_height="30dp"
                android:background="@drawable/texto_form"
                android:ems="10"
                android:hint="@string/Fecha_Nacimiento"
                android:inputType = "date"
                android:paddingLeft="20sp"
                android:textColor="#6E7692"
                android:textColorHint="#6E7692"
                android:textSize="22sp"
                android:layout_marginTop="5dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"/>

            <Button
                android:id="@+id/guardar"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:text="Guardar"
                android:textColor="#FFFFFF"
                android:textAlignment="center"
                android:layout_marginTop="20dp"
                android:layout_marginStart="125dp"
                android:layout_marginEnd="16dp"
                android:background="#000000"
                android:elevation="8dp"/>

        </LinearLayout>
    </LinearLayout>
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#FFDAB9"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/boton_nav_menu"
        app:layout_constraintHorizontal_bias="0.0"/>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:id="@+id/fragment_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>