<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.tfg.Login">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">
        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FFDAB9"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="#FFDAB9"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="5dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:orientation="horizontal">



                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="190dp"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/imageView"
                            android:layout_width="match_parent"
                            android:layout_height="135dp"
                            app:srcCompat="@drawable/baseline_chat_24"
                            android:layout_marginTop="50dp"/>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="700dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="415dp"
                    android:layout_height="736dp"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:padding="20dp">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/inicio_sesión"
                        android:textAlignment="center"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView11"
                        android:layout_width="match_parent"
                        android:layout_height="14dp" />


                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="match_parent"
                        android:layout_height="14dp" />


                    <EditText
                        android:id="@+id/CorreoLogin"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:background="@drawable/texto_form"
                        android:ems="10"
                        android:hint="@string/correo"
                        android:inputType="textPersonName"
                        android:paddingLeft="20sp"
                        android:textColor="#6E7692"
                        android:textColorHint="#6E7692"
                        android:textSize="22sp" />

                    <TextView
                        android:id="@+id/textView15"
                        android:layout_width="match_parent"
                        android:layout_height="14dp" />

                    <EditText
                        android:id="@+id/PasswordLogin"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:background="@drawable/texto_form"
                        android:ems="10"
                        android:hint="@string/contraseña"
                        android:inputType="textPassword"
                        android:paddingLeft="20sp"
                        android:textColor="#6E7692"
                        android:textColorHint="#6E7692"
                        android:textSize="22sp" />

                    <TextView
                        android:id="@+id/textView16"
                        android:layout_width="match_parent"
                        android:layout_height="14dp" />

                    <Button
                        android:id="@+id/Acceder"
                        android:layout_width="138dp"
                        android:layout_height="50dp"
                        android:backgroundTint="#D200BCD4"
                        android:text="@string/acceder"
                        android:textColor="#FFFFFF"
                        android:textSize="20sp"
                        android:textStyle="italic"
                        app:cornerRadius="20dp"
                        app:iconPadding="2dp" />

                    <TextView
                        android:id="@+id/textView17"
                        android:layout_width="match_parent"
                        android:layout_height="50dp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="100dp">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="200dp"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/textView25"
                                android:layout_width="220dp"
                                android:layout_height="80dp"
                                android:text="@string/no_tienes_cuenta"
                                android:textSize="24sp" />

                            <TextView
                                android:id="@+id/textView30"
                                android:layout_width="wrap_content"
                                android:layout_height="37dp" />

                            <TextView
                                android:id="@+id/Registrarse"
                                android:layout_width="220dp"
                                android:layout_height="47dp"
                                android:text="@string/registrarse"
                                android:textColor="#6363FF"
                                android:textSize="24sp"
                                android:textStyle="italic" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>