<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.tfg.Registro1">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FFDAB9"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="#FFDAB9"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="5dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="200dp"
                        android:layout_weight="1" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="190dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView7"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                        <ImageView
                            android:id="@+id/imageView"
                            android:layout_width="match_parent"
                            android:layout_height="135dp"
                            app:srcCompat="@drawable/dasmeetlogo" />

                    </LinearLayout>

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="200dp"
                        android:layout_weight="1" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="700dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="415dp"
                    android:layout_height="736dp"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:padding="20dp">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Registro"
                        android:textAlignment="center"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView11"
                        android:layout_width="match_parent"
                        android:layout_height="14dp" />

                    <EditText
                        android:id="@+id/Usuario"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:background="@drawable/texto_form"
                        android:ems="10"
                        android:hint="@string/Nombre"
                        android:inputType="textPersonName"
                        android:paddingLeft="20sp"
                        android:textColor="#6E7692"
                        android:textColorHint="#6E7692"
                        android:textSize="22sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="14dp" />

                    <EditText
                        android:id="@+id/Usuario1"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:background="@drawable/texto_form"
                        android:ems="10"
                        android:hint="@string/usuario"
                        android:inputType="textEmailAddress"
                        android:paddingLeft="20sp"
                        android:textColor="#6E7692"
                        android:textColorHint="#6E7692"
                        android:textSize="22sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="14dp" />

                    <EditText
                        android:id="@+id/Mail"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:background="@drawable/texto_form"
                        android:ems="10"
                        android:hint="@string/correo"
                        android:inputType="textEmailAddress"
                        android:paddingLeft="20sp"
                        android:textColor="#6E7692"
                        android:textColorHint="#6E7692"
                        android:textSize="22sp" />

                    <TextView
                        android:id="@+id/textView15"
                        android:layout_width="match_parent"
                        android:layout_height="14dp" />

                    <EditText
                        android:id="@+id/PasswordInicial"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:background="@drawable/texto_form"
                        android:ems="10"
                        android:hint="@string/contraseña"
                        android:inputType="textPassword"
                        android:paddingLeft="20sp"
                        android:textColor="#6E7692"
                        android:textColorHint="#6E7692"
                        android:textSize="22sp" />

                    <TextView
                        android:id="@+id/textView16"
                        android:layout_width="match_parent"
                        android:layout_height="14dp" />

                    <EditText
                        android:id="@+id/PasswordConfirmada"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:background="@drawable/texto_form"
                        android:ems="10"
                        android:hint="@string/contraseñaRepetir"
                        android:inputType="textPassword"
                        android:paddingLeft="20sp"
                        android:textColor="#6E7692"
                        android:textColorHint="#6E7692"
                        android:textSize="22sp" />

                    <TextView
                        android:id="@+id/textView13"
                        android:layout_width="match_parent"
                        android:layout_height="14dp" />

                    <EditText
                        android:id="@+id/et_nacimiento"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:background="@drawable/texto_form"
                        android:ems="10"
                        android:hint="@string/fechanacimiento"
                        android:importantForAutofill="no"
                        android:inputType="date"
                        android:maxLines="1"
                        android:onClick="showDatePickerDialog"
                        android:paddingLeft="20sp"
                        android:textColor="#6E7692"
                        android:textColorHint="#6E7692"
                        android:textSize="22sp"
                        tools:ignore="KeyboardInaccessibleWidget" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="14dp" />

                    <TextView
                        android:id="@+id/textView25"
                        android:layout_width="match_parent"
                        android:layout_height="14dp" />

                    <ImageView
                        android:id="@+id/primeraparte"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:layout_marginTop="20dp"
                        app:srcCompat="@drawable/parte1formulario">

                    </ImageView>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/Cancelar"
                            android:layout_width="159dp"
                            android:layout_height="50dp"
                            android:layout_marginLeft="20dp"
                            android:layout_marginTop="8dp"
                            android:src="@drawable/baseline_arrow_back_24"
                            app:layout_constraintBottom_toBottomOf="@id/primeraparte"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintRight_toRightOf="@id/Guardar"
                            app:layout_constraintStart_toStartOf="parent" />

                        <TextView
                            android:layout_width="20dp"
                            android:layout_height="14dp" />

                        <ImageView
                            android:id="@+id/Guardar"
                            android:layout_width="155dp"
                            android:layout_height="50dp"
                            android:layout_marginTop="8dp"
                            android:src="@drawable/baseline_save_24" />


                    </LinearLayout>

                </LinearLayout>


            </LinearLayout>

        </LinearLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>